# hypeline

./: README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
.github/workflows/: ci.yml
src/: app.css  app.d.ts
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  settings.json  svelte.json
src-tauri/src/: api.rs  bttv.rs  chat.rs  emotes.rs  error.rs  lib.rs  log.rs  main.rs  migrations.rs  server.rs  users.rs
src-tauri/src/api/: channels.rs  chat.rs  eventsub.rs  mod.rs  moderation.rs  streams.rs  users.rs
src-tauri/src/eventsub/: client.rs  mod.rs
src-tauri/src/irc/: config.rs  error.rs  mod.rs  websocket.rs
src-tauri/src/irc/client/: event_loop.rs  mod.rs  pool_connection.rs
src-tauri/src/irc/connection/: event_loop.rs  mod.rs
src-tauri/src/irc/message/: commands.rs  mod.rs  prefix.rs  tags.rs  twitch.rs
src-tauri/src/providers/: bttv.rs  ffz.rs  mod.rs  recent_messages.rs  seventv.rs  twitch.rs
src-tauri/src/providers/seventv/: client.rs  emotes.rs  mod.rs
src/lib/: app-state.svelte.ts  auth-user.svelte.ts  auth.ts  channel.svelte.ts  chat.svelte.ts  chat.ts  commands.ts  completer.svelte.ts  event-sub.ts  log.ts  scopes.ts  settings.svelte.ts  settings.ts  seventv.ts  state.svelte.ts  tauri.ts  twitch-api.ts  types.ts  user.svelte.ts  user.ts  util.ts  viewer.svelte.ts
src/lib/commands/: announce.ts  ban.ts  block.ts  clear.ts  color.ts  emote-only.ts  follower-only.ts  helper.ts  index.ts  marker.ts  mod.ts  mods.ts  monitor.ts  pin.ts  raid.ts  restrict.ts  shared-chat.ts  shield.ts  shoutout.ts  slow.ts  subscriber-only.ts  timeout.ts  unban.ts  unblock.ts  unique.ts  unmod.ts  unmonitor.ts  unraid.ts  unrestrict.ts  untimeout.ts  unvip.ts  user.ts  util.ts  vip.ts  vips.ts  warn.ts
src/lib/components/: Announcement.svelte  Channel.svelte  ChannelList.svelte  Chat.svelte  ChatInput.svelte  Emote.svelte  EmotePicker.svelte  Header.svelte  Input.svelte  JoinDialog.svelte  NotificationMessage.svelte  QuickActions.svelte  Resub.svelte  Sidebar.svelte  StreamHeader.svelte  StreamInfo.svelte  Suggestions.svelte  Switch.svelte  SystemMessage.svelte  TextMessage.svelte  Timestamp.svelte  TitleBar.svelte  Tooltip.svelte  UserMessage.svelte  WindowsControls.svelte
src/lib/handlers/: channel-chat-message-delete.ts  channel-chat-message.ts  channel-chat-notification.ts  clearmsg.ts  helper.ts  index.ts  join.ts  manager.ts  part.ts  privmsg.ts  usernotice.ts
src/lib/message/: index.ts  message.svelte.ts  message.ts  notification-message.ts  parse.ts  system-message.ts  text-message.ts  user-message.svelte.ts  user-message.ts
src/lib/twitch/: eventsub.ts  index.ts  irc.ts
src/lib/twitch-api/: chat.ts  index.ts  users.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/(main)/: +layout.ts  +page.svelte
src/routes/[channel]/: +page.svelte  +page.ts
src/routes/settings/: +page.svelte  General.svelte
(+76 files in other folders)
