[package]
name = "Hypeline"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hypeline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
tauri-plugin-websocket = "2"
rustls = { version = "0.23.25", features = ["ring"] }
tauri-plugin-log = "2"
twitch_api = { version = "0.7.2", features = ["client", "helix", "eventsub", "reqwest"] }
reqwest = { version = "0.12.15", features = ["json"] }
log = "0.4.27"
anyhow = "1.0.97"
thiserror = "2.0.12"
futures = "0.3.31"
tauri-plugin-svelte = "2.1.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
