[package]
name = "hypeline"
version = "0.1.0"
authors = ["xiBread <hello@oscarlv.com>"]
edition = "2021"
publish = false

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hypeline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-svelte = "2.1.1"

anyhow = "1.0.97"
either = "1.15.0"
enum_dispatch = "0.3.13"
futures = "0.3.31"
httparse = "1.10.1"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
rustls = { version = "0.23.25", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio = { version = "1.44.2", features = ["macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
twitch_api = { version = "0.7.2", features = ["client", "helix", "eventsub", "reqwest"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
